As part of the fix for DE006 I removed some of the formatting to make content not overlap.

--- a/css/main.css
+++ b/css/main.css
@@ -53,14 +53,11 @@ body
 
 #blurb
 {
-    margin-left: 350px;
-    padding-top: 50px;
     display: inline-block;
 }
 
 #goals
 {
-    margin-top: -100px;
     display: block;
     width: 25%;
 }
